@@ -1,23 +1,27 @@
-/**
- *
- */
 package com.tisl.mpl.commerceservices.order.hook;
 
+
+import de.hybris.platform.category.CategoryService;
+import de.hybris.platform.category.model.CategoryModel;
 import de.hybris.platform.commerceservices.order.hook.CommercePlaceOrderMethodHook;
 import de.hybris.platform.commerceservices.service.data.CommerceCheckoutParameter;
 import de.hybris.platform.commerceservices.service.data.CommerceOrderResult;
 import de.hybris.platform.core.enums.OrderStatus;
+import de.hybris.platform.core.model.LimitedStockPromoInvalidationModel;
 import de.hybris.platform.core.model.order.AbstractOrderEntryModel;
 import de.hybris.platform.core.model.order.OrderEntryModel;
 import de.hybris.platform.core.model.order.OrderModel;
 import de.hybris.platform.core.model.order.payment.CODPaymentInfoModel;
 import de.hybris.platform.core.model.order.price.DiscountModel;
+import de.hybris.platform.core.model.product.ProductModel;
 import de.hybris.platform.core.model.user.AddressModel;
+import de.hybris.platform.core.model.user.CustomerModel;
 import de.hybris.platform.order.AbstractOrderEntryTypeService;
 import de.hybris.platform.order.InvalidCartException;
 import de.hybris.platform.order.OrderService;
 import de.hybris.platform.order.strategies.ordercloning.CloneAbstractOrderStrategy;
 import de.hybris.platform.promotions.model.AbstractPromotionModel;
+import de.hybris.platform.promotions.model.AbstractPromotionRestrictionModel;
 import de.hybris.platform.promotions.model.OrderPromotionModel;
 import de.hybris.platform.promotions.model.ProductPromotionModel;
 import de.hybris.platform.promotions.model.PromotionOrderEntryConsumedModel;
@@ -61,16 +65,19 @@ import com.tisl.mpl.constants.MarketplacecommerceservicesConstants;
 import com.tisl.mpl.constants.clientservice.MarketplacecclientservicesConstants;
 import com.tisl.mpl.core.model.MplPaymentAuditEntryModel;
 import com.tisl.mpl.core.model.MplPaymentAuditModel;
+import com.tisl.mpl.core.model.MplZoneDeliveryModeValueModel;
 import com.tisl.mpl.core.model.RichAttributeModel;
 import com.tisl.mpl.exception.EtailNonBusinessExceptions;
 import com.tisl.mpl.marketplacecommerceservices.daos.MplOrderDao;
 import com.tisl.mpl.marketplacecommerceservices.service.MplCommerceCartService;
+import com.tisl.mpl.marketplacecommerceservices.service.MplDeliveryCostService;
 import com.tisl.mpl.marketplacecommerceservices.service.MplOrderService;
 import com.tisl.mpl.marketplacecommerceservices.service.MplSellerInformationService;
 import com.tisl.mpl.marketplacecommerceservices.service.MplVoucherService;
 import com.tisl.mpl.marketplacecommerceservices.service.NotifyPaymentGroupMailService;
 import com.tisl.mpl.marketplacecommerceservices.service.RMSVerificationNotificationService;
 import com.tisl.mpl.model.CustomProductBOGOFPromotionModel;
+import com.tisl.mpl.model.EtailLimitedStockRestrictionModel;
 import com.tisl.mpl.model.SellerInformationModel;
 import com.tisl.mpl.util.OrderStatusSpecifier;
 
@@ -108,6 +115,19 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 	@Autowired
 	private MplCommerceCartService mplCommerceCartService;
 
+
+	//	@Autowired
+	//	private MplFraudModelService mplFraudModelService;
+
+
+
+
+	@Autowired
+	private CategoryService categoryService;
+
+
+
+
 	@Autowired
 	private OrderStatusSpecifier orderStatusSpecifier;
 
@@ -125,6 +145,8 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 
 	@Autowired
 	private MplOrderService mplOrderService;
+	@Autowired
+	private MplDeliveryCostService deliveryCostService;
 
 	//	@Autowired
 	//	private MplFraudModelService mplFraudModelService;
@@ -138,7 +160,9 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 
 	/*
 	 * (non-Javadoc)
-	 *
+	 * 
+	 * 
+	 * 
 	 * @see
 	 * de.hybris.platform.commerceservices.order.hook.CommercePlaceOrderMethodHook#afterPlaceOrder(de.hybris.platform
 	 * .commerceservices.service.data.CommerceCheckoutParameter,
@@ -160,6 +184,80 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 			//				updateFraudModel(orderModel);
 			//
 			//			}
+
+
+
+			//TPR -965 + TPR-4579 starts
+			if (null != orderModel && CollectionUtils.isNotEmpty(orderModel.getAllPromotionResults())
+					&& isLimitedStockPromoExists(orderModel.getAllPromotionResults()))
+			{
+				final List<LimitedStockPromoInvalidationModel> orderInvalidationList = new ArrayList<LimitedStockPromoInvalidationModel>();
+				boolean isCategoryLevelPromo = false;
+
+				for (final AbstractOrderEntryModel orderEntry : orderModel.getEntries())
+				{
+					if (orderEntry.getQualifyingCount().intValue() > 0
+							&& (null != orderEntry.getGiveAway() && !orderEntry.getGiveAway().booleanValue()))
+					{
+						isCategoryLevelPromo = validateCategorySetPromo(orderModel.getAllPromotionResults(),
+								orderEntry.getProductPromoCode());
+
+						final LimitedStockPromoInvalidationModel promoInvalidationModel = (LimitedStockPromoInvalidationModel) getModelService()
+								.create(LimitedStockPromoInvalidationModel.class);
+
+						if (isCategoryLevelPromo)
+						{
+							final String categoryCode = getCatgoryCode(orderModel.getAllPromotionResults(),
+									orderEntry.getProductPromoCode(), orderEntry.getProduct());
+
+							promoInvalidationModel.setProductCode(orderEntry.getProduct().getCode());
+							promoInvalidationModel.setUssid(orderEntry.getSelectedUSSID());
+							promoInvalidationModel.setPromoCode(orderEntry.getProductPromoCode());
+							promoInvalidationModel.setGuid(orderModel.getGuid());
+							promoInvalidationModel.setUsedUpCount(Integer.valueOf(orderEntry.getQualifyingCount().intValue()));
+							promoInvalidationModel.setOrder(orderModel);
+							if (StringUtils.isNotEmpty(categoryCode))
+							{
+								promoInvalidationModel.setCategoryCode(categoryCode);
+							}
+
+							if (null != orderModel.getUser()) // Added for TPR-4331: Customer Count Configuration
+							{
+								final CustomerModel customer = (CustomerModel) orderModel.getUser();
+								if (null != customer && null != customer.getOriginalUid())
+								{
+									promoInvalidationModel.setCustomerID(customer.getOriginalUid());
+								}
+							}
+							orderInvalidationList.add(promoInvalidationModel);
+						}
+						else
+						{
+							promoInvalidationModel.setProductCode(orderEntry.getProduct().getCode());
+							promoInvalidationModel.setUssid(orderEntry.getSelectedUSSID());
+							promoInvalidationModel.setPromoCode(orderEntry.getProductPromoCode());
+							promoInvalidationModel.setGuid(orderModel.getGuid());
+							promoInvalidationModel.setUsedUpCount(Integer.valueOf(orderEntry.getQualifyingCount().intValue()));
+							promoInvalidationModel.setOrder(orderModel);
+
+							if (null != orderModel.getUser()) // Added for TPR-4331: Customer Count Configuration
+							{
+								final CustomerModel customer = (CustomerModel) orderModel.getUser();
+								if (null != customer && null != customer.getOriginalUid())
+								{
+									promoInvalidationModel.setCustomerID(customer.getOriginalUid());
+								}
+							}
+							orderInvalidationList.add(promoInvalidationModel);
+						}
+					}
+				}
+				getModelService().saveAll(orderInvalidationList);
+			}
+
+
+			//TPR -965 + TPR-4579 ends
+
 			if (null != orderModel)
 			{
 				//INC144315079
@@ -171,6 +269,7 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 				 * LOG.debug("Order Sequence Generation True"); final String orderIdSequence =
 				 * getMplCommerceCartService().generateOrderId(); LOG.debug("Order Sequence Generated:- " +
 				 * orderIdSequence);
+				 * 
 				 * 
 				 * orderModel.setCode(orderIdSequence); } else { LOG.debug("Order Sequence Generation False"); final Random
 				 * rand = new Random(); orderModel.setCode(Integer.toString((rand.nextInt(900000000) + 100000000))); }
@@ -341,9 +440,140 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 	//	}
 
 
+	/**
+	 * @param allPromotionResults
+	 * @param productPromoCode
+	 * @param product
+	 * @return String
+	 */
+	private String getCatgoryCode(final Set<PromotionResultModel> allPromotionResults, final String productPromoCode,
+			final ProductModel product)
+	{
+		String categoryCode = MarketplacecommerceservicesConstants.EMPTY;
+
+		if (CollectionUtils.isNotEmpty(allPromotionResults) && StringUtils.isNotEmpty(productPromoCode))
+		{
+			for (final PromotionResultModel oModel : allPromotionResults)
+			{
+				if (null != oModel.getCertainty() && oModel.getCertainty().floatValue() == 1.00F && null != oModel.getPromotion()
+						&& null != oModel.getPromotion().getCode()
+						&& StringUtils.equalsIgnoreCase(oModel.getPromotion().getCode(), productPromoCode))
+				{
+					if (oModel.getPromotion() instanceof ProductPromotionModel
+							&& CollectionUtils.isNotEmpty(((ProductPromotionModel) oModel.getPromotion()).getCategories()))
+					{
+						categoryCode = getCategoryCode(((ProductPromotionModel) oModel.getPromotion()).getCategories(), product);
+					}
+				}
+			}
+		}
+
+		return categoryCode;
+	}
+
+	/**
+	 * @param categories
+	 * @param product
+	 * @return categoryCode
+	 */
+	private String getCategoryCode(final Collection<CategoryModel> categories, final ProductModel product)
+	{
+		String categoryCode = MarketplacecommerceservicesConstants.EMPTY;
+
+		if (CollectionUtils.isNotEmpty(product.getSupercategories()))
+		{
+			final List<CategoryModel> getCategoryDataList = getSuperCategoryData(product.getSupercategories());
+
+			if (CollectionUtils.isNotEmpty(getCategoryDataList))
+			{
+				for (final CategoryModel productCategory : getCategoryDataList)
+				{
+					for (final CategoryModel promoCategory : categories)
+					{
+						if (StringUtils.equalsIgnoreCase(productCategory.getCode(), promoCategory.getCode()))
+						{
+							categoryCode = productCategory.getCode();
+							break;
+						}
+					}
+				}
+			}
+		}
+
+		return categoryCode;
+	}
+
+
+	/**
+	 * Tree Traversal for Category Promotions
+	 *
+	 * @param supercategories
+	 * @return categoryList
+	 */
+	private List<CategoryModel> getSuperCategoryData(final Collection<CategoryModel> supercategories)
+	{
+		final List<CategoryModel> categoryList = new ArrayList<CategoryModel>();
+		List<CategoryModel> subList = null;
+
+		for (final CategoryModel category : supercategories)
+		{
+			subList = new ArrayList<CategoryModel>(categoryService.getAllSupercategoriesForCategory(category));
+			categoryList.addAll(subList);
+		}
+
+		categoryList.addAll(supercategories);
+
+		return categoryList;
+	}
+
+	/**
+	 * @param allPromotionResults
+	 * @param productPromoCode
+	 * @return boolean
+	 */
+	private boolean validateCategorySetPromo(final Set<PromotionResultModel> allPromotionResults, final String productPromoCode)
+	{
+		boolean flag = false;
+
+		if (CollectionUtils.isNotEmpty(allPromotionResults) && StringUtils.isNotEmpty(productPromoCode))
+		{
+			for (final PromotionResultModel oModel : allPromotionResults)
+			{
+				if (null != oModel.getCertainty() && oModel.getCertainty().floatValue() == 1.00F && null != oModel.getPromotion()
+						&& null != oModel.getPromotion().getCode()
+						&& StringUtils.equalsIgnoreCase(oModel.getPromotion().getCode(), productPromoCode))
+				{
+					flag = checkPromoData(oModel.getPromotion());
+				}
+			}
+		}
+
+		return flag;
+	}
+
+	/**
+	 * Checks for Promotion set up with Category Details
+	 *
+	 * @param promotion
+	 * @return boolean
+	 */
+	private boolean checkPromoData(final AbstractPromotionModel promotion)
+	{
+		boolean flag = false;
+
+		if (CollectionUtils.isNotEmpty(((ProductPromotionModel) promotion).getCategories()))
+		{
+			flag = true;
+		}
+
+		return flag;
+	}
+
 	/*
 	 * (non-Javadoc)
-	 *
+	 * 
+	 * 
+	 * 
 	 * @see
 	 * de.hybris.platform.commerceservices.order.hook.CommercePlaceOrderMethodHook#beforePlaceOrder(de.hybris.platform
 	 * .commerceservices.service.data.CommerceCheckoutParameter)
@@ -357,7 +587,9 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 
 	/*
 	 * (non-Javadoc)
-	 *
+	 * 
+	 * 
+	 * 
 	 * @see
 	 * de.hybris.platform.commerceservices.order.hook.CommercePlaceOrderMethodHook#beforeSubmitOrder(de.hybris.platform
 	 * .commerceservices.service.data.CommerceCheckoutParameter,
@@ -466,9 +698,13 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 
 	/*
 	 * @Desc : Used to set parent transaction id and transaction id mapping Buy A B Get C TISPRO-249
-	 *
+	 * 
+	 * 
+	 * 
 	 * @param subOrderList
-	 *
+	 * 
+	 * 
+	 * 
 	 * @throws Exception
 	 */
 	//OrderIssues:-
@@ -547,8 +783,9 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 						}
 						else
 						{
-							LOG.error("No  Entries available for Suborder ID:- " + subOrderModel.getCode());
-							throw new InvalidCartException("No  Entries available for Suborder ID:- " + subOrderModel.getCode());
+							LOG.error(MarketplacecommerceservicesConstants.NOENTRYSUBORDERLOG + subOrderModel.getCode());
+							throw new InvalidCartException(MarketplacecommerceservicesConstants.NOENTRYSUBORDERLOG
+									+ subOrderModel.getCode());
 						}
 					}
 				}
@@ -568,9 +805,13 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 
 	/*
 	 * @Desc : Used to populate parent freebie map for BUY A B GET C promotion TISPRO-249
-	 *
+	 * 
+	 * 
+	 * 
 	 * @param subOrderList
-	 *
+	 * 
+	 * 
+	 * 
 	 * @throws Exception
 	 */
 	//OrderIssues:-
@@ -617,8 +858,8 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 			}
 			else
 			{
-				LOG.error("No  Entries available for Suborder ID:- " + subOrderModel.getCode());
-				throw new InvalidCartException("No  Entries available for Suborder ID:- " + subOrderModel.getCode());
+				LOG.error(MarketplacecommerceservicesConstants.NOENTRYSUBORDERLOG + subOrderModel.getCode());
+				throw new InvalidCartException(MarketplacecommerceservicesConstants.NOENTRYSUBORDERLOG + subOrderModel.getCode());
 			}
 		}
 		return freebieParentMap;
@@ -699,19 +940,46 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 					LOG.info("Total Cart Level Discount>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>" + totalCartLevelDiscount);
 					sellerOrderList.setTotalDiscounts(Double.valueOf(totalCartLevelDiscount + totalCouponDiscount));
 
-
-					if (null != entryModelList.getCurrDelCharge() && entryModelList.getCurrDelCharge().doubleValue() > 0D)
+					double delCost = 0.0d;
+					if (entryModelList.getPrevDelCharge() != null && entryModelList.getPrevDelCharge().doubleValue() > 0D)
 					{
-						totalDeliveryPrice += entryModelList.getCurrDelCharge().doubleValue();
+						totalDeliveryPrice += entryModelList.getPrevDelCharge().doubleValue();
 					}
 					else
 					{
-						LOG.debug("Delivery charge for the entry is either NULL or Zero");
+
+						final MplZoneDeliveryModeValueModel valueModel = deliveryCostService.getDeliveryCost(entryModelList
+								.getMplDeliveryMode().getDeliveryMode().getCode(), sellerOrderList.getCurrency().getIsocode(),
+								entryModelList.getSelectedUSSID());
+						if (entryModelList.getGiveAway() != null && !entryModelList.getGiveAway().booleanValue())
+						{
+							delCost = (valueModel.getValue().doubleValue() * entryModelList.getQuantity().intValue());
+							totalDeliveryPrice = delCost;
+							entryModelList.setCurrDelCharge(Double.valueOf(delCost));
+						}
+						else
+						{
+							delCost = 0.0d;
+							entryModelList.setCurrDelCharge(Double.valueOf(delCost));
+							totalDeliveryPrice = delCost;
+							LOG.warn("skipping deliveryCost for freebee [" + entryModelList.getSelectedUSSID() + "] due to freebee ");
+						}
+						modelService.save(entryModelList);
+						modelService.refresh(entryModelList);
+
 					}
 					if (entryModelList.getScheduledDeliveryCharge() != null
 							&& entryModelList.getScheduledDeliveryCharge().doubleValue() > 0D)
+
 					{
 						totalDeliveryPrice += entryModelList.getScheduledDeliveryCharge().doubleValue();
+
+					}
+
+					if (totalDeliveryPrice <= 0D)
+					{
+
+						LOG.debug("Delivery charge for the entry is either NULL or Zero");
 					}
 
 				}
@@ -747,7 +1015,9 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 				//OrderIssues:- refresh added
 				modelService.refresh(sellerOrderList);
 			}
+
 		}
+
 		catch (final ModelSavingException e)
 		{
 			LOG.error(" error occured while calculating subtotal from setSuborderTotalAfterOrderSplitting", e);
@@ -874,8 +1144,9 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 						}
 						else
 						{
-							LOG.error("No  Entries available for Suborder ID:- " + subOrderModel.getCode());
-							throw new InvalidCartException("No  Entries available for Suborder ID:- " + subOrderModel.getCode());
+							LOG.error(MarketplacecommerceservicesConstants.NOENTRYSUBORDERLOG + subOrderModel.getCode());
+							throw new InvalidCartException(MarketplacecommerceservicesConstants.NOENTRYSUBORDERLOG
+									+ subOrderModel.getCode());
 						}
 					}
 				}
@@ -953,9 +1224,9 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 						final CustomProductBOGOFPromotionModel bogoPromotion = (CustomProductBOGOFPromotionModel) executingPromotion;
 						//OrderIssues:- null check added
 						final Integer promotionQualifingCount = null != bogoPromotion.getQualifyingCount() ? bogoPromotion
-								.getQualifyingCount() : new Integer(0);
+								.getQualifyingCount() : Integer.valueOf(0); //SONAR FIX
 						final Integer promotionFreeCount = null != bogoPromotion.getFreeCount() ? bogoPromotion.getFreeCount()
-								: new Integer(0);
+								: Integer.valueOf(0); //SONAR FIX
 						//OrderIssues:-
 						if ((promotionQualifingCount.intValue() - promotionFreeCount.intValue()) > 0)
 						{
@@ -1115,8 +1386,8 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 			}
 			else
 			{
-				LOG.error("No  Entries available for Suborder ID:- " + subOrderModel.getCode());
-				throw new InvalidCartException("No  Entries available for Suborder ID:- " + subOrderModel.getCode());
+				LOG.error(MarketplacecommerceservicesConstants.NOENTRYSUBORDERLOG + subOrderModel.getCode());
+				throw new InvalidCartException(MarketplacecommerceservicesConstants.NOENTRYSUBORDERLOG + subOrderModel.getCode());
 			}
 		}
 		return innerList;
@@ -1125,9 +1396,13 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 
 	/*
 	 * @Desc : this method is used to set freebie items parent transactionid TISUTO-128
-	 *
+	 * 
+	 * 
+	 * 
 	 * @param orderList
-	 *
+	 * 
+	 * 
+	 * 
 	 * @throws EtailNonBusinessExceptions
 	 */
 	// OrderIssues:- InvalidCartException exception throws
@@ -1194,8 +1469,8 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 				}
 				else
 				{
-					LOG.error("No  Entries available for Suborder ID:- " + subOrderModel.getCode());
-					throw new InvalidCartException("No  Entries available for Suborder ID:- " + subOrderModel.getCode());
+					LOG.error(MarketplacecommerceservicesConstants.NOENTRYSUBORDERLOG + subOrderModel.getCode());
+					throw new InvalidCartException(MarketplacecommerceservicesConstants.NOENTRYSUBORDERLOG + subOrderModel.getCode());
 				}
 			}
 
@@ -1251,6 +1526,7 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 									}
 
 									//R2.3 Code Changes bug ID TISRLEE-3197
+
 									getModelService().save(subOrderEntryModel);
 									for (final String freebieUssid : associatedItemMap.get(parentUssId))
 									{
@@ -1268,6 +1544,7 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 																&& null != subOrderEntryModel.getGiveAway()
 																&& subOrderEntryModel.getGiveAway().booleanValue())
 														{
+
 															//R2.3 Code Chages bug ID TISRLEE-3197
 															try
 															{
@@ -1323,8 +1600,8 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 				}
 				else
 				{
-					LOG.error("No  Entries available for Suborder ID:- " + subOrderModel.getCode());
-					throw new InvalidCartException("No  Entries available for Suborder ID:- " + subOrderModel.getCode());
+					LOG.error(MarketplacecommerceservicesConstants.NOENTRYSUBORDERLOG + subOrderModel.getCode());
+					throw new InvalidCartException(MarketplacecommerceservicesConstants.NOENTRYSUBORDERLOG + subOrderModel.getCode());
 				}
 			}
 		}
@@ -1433,7 +1710,7 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 			}
 			else
 			{
-				LOG.error("No  Entries available for Suborder ID:- " + subOrderModel.getCode());
+				LOG.error(MarketplacecommerceservicesConstants.NOENTRYSUBORDERLOG + subOrderModel.getCode());
 				throw new InvalidCartException("No  Entries available for parent Order ID:- " + subOrderModel.getCode());
 			}
 		}
@@ -1458,8 +1735,8 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 		String parentUssid = StringUtils.EMPTY;
 		String ussIdA = StringUtils.EMPTY;
 		//OrderIssues:- Long initialization changed from Null to new Long(0);
-		Long ussIdAQty = new Long(0);
-		Long ussIdBQty = new Long(0);
+		Long ussIdAQty = Long.valueOf(0); //SONAR FIX
+		Long ussIdBQty = Long.valueOf(0); //SONAR FIX
 		String ussIdB = StringUtils.EMPTY;
 		String ussIdADelMod = StringUtils.EMPTY;
 		String ussIdBDelMod = StringUtils.EMPTY;
@@ -1496,7 +1773,7 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 				}
 				else
 				{
-					LOG.error("No  Entries available for Suborder ID:- " + orderModel.getCode());
+					LOG.error(MarketplacecommerceservicesConstants.NOENTRYSUBORDERLOG + orderModel.getCode());
 					throw new InvalidCartException("No  Entries available for parent Order ID:- " + orderModel.getCode());
 				}
 			}
@@ -1737,6 +2014,7 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 					{
 						scheduleDeliveryCharge = scheduleDeliveryCharge.doubleValue() > 0.0 ? Double.valueOf(scheduleDeliveryCharge
 								.doubleValue() / abstractOrderEntryModel.getQualifyingCount().doubleValue()) : scheduleDeliveryCharge;
+
 					}
 					else
 					{
@@ -1804,6 +2082,7 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 									&& abstractOrderEntryModel.getConvenienceChargeApportion() != null
 									&& abstractOrderEntryModel.getTotalProductLevelDisc() != null)
 							{
+
 								//INC144316050
 								//								qualifyingCount = abstractOrderEntryModel.getQualifyingCount().intValue()
 								//										+ abstractOrderEntryModel.getFreeCount().intValue();
@@ -2192,10 +2471,12 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 						orderEntryModel.setReturnWindow(model.getReturnWindow());
 					}
 
-					//					if (null != model.getDeliveryFulfillModes() && StringUtils.isNotEmpty(model.getDeliveryFulfillModes().getCode()))
-					//					{
-					//						orderEntryModel.setFulfillmentType(model.getDeliveryFulfillModes().getCode());
-					//					}
+					if (null != model.getDeliveryFulfillModes() && StringUtils.isNotEmpty(model.getDeliveryFulfillModes().getCode()))
+
+					{
+						orderEntryModel.setFulfillmentType(model.getDeliveryFulfillModes().getCode());
+
+					}
 
 				}
 			}
@@ -2735,6 +3016,35 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 		this.rMSVerificationNotificationService = rMSVerificationNotificationService;
 	}
 
+	/**
+	 * Checking or stock level restriction
+	 *
+	 * @param allPromotionResults
+	 * @return isPresent
+	 */
+	private boolean isLimitedStockPromoExists(final Set<PromotionResultModel> allPromotionResults)
+	{
+		boolean isPresent = false;
+		for (final PromotionResultModel promo : allPromotionResults)
+		{
+			for (final AbstractPromotionRestrictionModel restriction : promo.getPromotion().getRestrictions())
+			{
+				if (restriction instanceof EtailLimitedStockRestrictionModel
+						&& null != ((EtailLimitedStockRestrictionModel) restriction).getMaxStock())
+				{
+					final int maxStock = ((EtailLimitedStockRestrictionModel) restriction).getMaxStock().intValue();
+					if (maxStock > 0)
+					{
+						isPresent = true;
+						break;
+					}
+				}
+			}
+
+		}
+		return isPresent;
+
+	}
 
 
 
